chore: Java 21 and code quality improvements
Signed-off-by: Mario Serrano <mario@dynamiasoluciones.com>